fixed spacing on mobile.

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -83,6 +83,10 @@ img.featuredImg {
         height: auto;
     }
 
+    .hero-image-container {
+        margin-top: 0 !important;
+    }
+
     .featuredReverseImg{
         order: 2;
     }
